<resources>
    <string name="app_name">EasyTicket</string>
    <string name="ticket">How many tickets</string>
    <string name="full">Number of full tickets:</string>
    <string name="half">Number of half tickets:</string>
    <string name="tot">Total tickets:</string>
    <string name="summary"><u>Ticket Summary</u></string>
    <string name="name">Name:</string>
    <string name="tp">Mobile Number:</string>
    <string name="email">Email:</string>
    <string name="condition" translatable="false">I agreed terms and conditions.</string>
    <string name="coupn">Coupon Code:</string>
    <string name="cardNo">Card Number:</string>
    <string name="edate">Expiry Date:</string>
    <string name="cvv2">CVV/CVC:</string>
    <string name="payMethod">We accept</string>
    <string name="amount">Amount:</string>
    <string name="cardName">Card Name:</string>
    <string name="exPrice">$10.00</string>
    <string name="enterCoupen">Enter your coupen code..</string>
    <string name="enterCard">Enter your card name..</string>
    <string name="entercardno">Enter your card number..</string>
    <string name="enterName">Enter your name..</string>
    <string name="enterPhone">Enter phone..</string>
    <string name="enterEmail">Enter your email..</string>
    <string name="myPaymets">My Bookings</string>
    <string name="app_name">Theater</string>
    <string name="SignUpHere">Sign up Here</string>
    <string name="PswMsg">Please enter a password 6 or more words.</string>
    <string name="SignBtn">Sign Up</string>
    <string name="LoginLink">Already member? Login</string>
    <string name="UserNameUp">alishaaa*Sliva</string>
    <string name="ProName">Alisha De Silva</string>
    <string name="ProMail">AlishaDSilva@gmail.com</string>
    <string name="LogAcc">Login to your account</string>
    <string name="ForgotPsw">Forgot your password?</string>
    <string name="MNews">Movie News</string>
    <string name="NoAccount">Don\'t have account?</string>
    <string name="Name">Name:</string>
    <string name="Email">Email:</string>
    <string name="MobileNo">Mobile Number:</string>
    <string name="UName">User Name:</string>
    <string name="Psw">Password:</string>
    <string name="SignOut">Sign Out</string>
    <string name="EditPro"> Edit Profile</string>
    <string name="Review1">\'Black Panther\' review: A sleek Marvel of a kingly superhero</string>
    <string name="R1Details">Black Panther\' — 3.5 stars MPAA rating: PG-13 (for prolonged sequences of action violence, and a brief rude gesture)   Running time: 2:20 Even if it had nothing else going for it, Black Panther would still be the best-looking Marvel movie yet. Supersaturated with vivid afro-futurism and as bold and riotous as a rack of dashiki print shirts, it looks like a particularly excitable Sun Ra album cover. Fortunately, the film doesn’t trade on looks alone....</string>
    <string name="OfferT">Offers and Promotions</string>
    <string name="OfferDec">From time to time EAP Films and Theaters offers its patrons various offers with third party tie ups. These offers are sometimes linked to a particular movie and or a Theater.  Listed below are some of the current promotions and offers that are being offered.</string>
    <string name="R1MoreD">Even if it had nothing else going for it, Black Panther would still be the best-looking Marvel movie yet. Supersaturated with vivid afro-futurism and as bold and riotous as a rack of dashiki print shirts, it looks like a particularly excitable Sun Ra album cover. Fortunately, the film doesn’t trade on looks alone.</string>
    <string name="R1MoreD2">  The score, by Ludwig Göransson and Kendrick Lamar, combines primal beats with the growling purr of a pack of big cats....</string>
    <string name="login">Login</string>
    <string name="successMsg">Sign Up Successfully</string>
    <string name="seeProfile">See Profile</string>

    //Madusha

    <string name="search">Search here for Theaters</string>
    <string name="SearchButton">Search</string>
    <string name="TheaterName">Theaters</string>
    <string name="CinemaNugegoga">Cinema World - Nugegoda</string>
    <string name="AddressNugegoga">Address :  No .102, Main Road ,Nugegoda</string>
    <string name="TelephoneNugegoda">Telephone :  0112346789</string>
    <string name="EmailNugegoda">Email :   cinemaworldNugegoda@gmail.com</string>
    <string name="phoneMaharagama">Telephone :   01123768965</string>
    <string name="EmailMaharagama">Email :  cinemaworldMaharagama@gmail.com</string>
    <string name="CinemawordRajagiriya">Address :  No98, Flower Road,Rajagiriya</string>
    <string name="RajagiriyaPhone">Telephone :   0112896657</string>
    <string name="ragagiriyaEmail">Email :  cinemaworldRajagiriya@gmail.com</string>
    <string name="CinemaWorldMharagama">Address :   No34/A ,Gamini Road, Maharagama</string>
    <string name="CinemaworldMaharagama">Cinema World - Maharagama</string>
    <string name="cinemaWorldRaja">Cinema World - Rajagiriya</string>
    <string name="btnMoreInfo">More Info</string>
    <string name="MoreInforContact">Contact Details</string>
    <string name="parkingdetail">Car parking available for customers</string>
    <string name="park">Car Parking</string>
    <string name="restayrantDetails">Come and enjoy our delicious food</string>
    <string name="Restaurant">Restaurant</string>
    <string name="SnackShop">Snack Shop</string>
    <string name="snackShopDetails">Come and enjoy snacks abd get offers.</string>
    <string name="Feedback">Contact about Films and Theaters</string>
    <string name="FeedbackDescription">Please mention here your feedback about experience using our Movie Ticket Booking app</string>
    <string name="ContactUs">If you wish to contact us via email please fill in the following form and we will get in touch with you at the earliest.</string>
    <string name="FormAttribute1">Name</string>
    <string name="FormAttribute2">Phone Number</string>
    <string name="FormAttribute3">Email</string>
    <string name="FormAttribute4">Message</string>
    <string name="ResetButtion">Reset</string>
    <string name="sendButton">Send</string>
    <string name="ProvidedFeedback">  Your Provided Feedback</string>
    <string name="changeBtn">Change</string>
    <string name="deleteBtn">Delete</string>
    <string name="ContactMore">For More Details - Contact Us</string>
    <string name="btnLogin">Admin Login</string>
    <string name="LogAsAdmin">Login As An Admin</string>
    <string name="AdminName">User Name</string>
    <string name="adminPass">Password</string>
    <string name="inputAdminUN">Enter User Name</string>
    <string name="inputAdminPW">Enter Password</string>
    <string name="AdminProfile">Admin Profile</string>
    <string name="btnUpdate">Update</string>
    <string name="adminInfoUpdate">Update</string>
    <string name="carpakingDesc">Car parking available for customers.</string>
    <string name="ResturantDesc">Come and enjoy our delicious food.</string>
    <string name="snackShop">Come and enjoy snacks and more offers.</string>
    <string name="updateFeedback">Update Feedback</string>
    <string name="CinemaWorld">Cinema World - Rajagiriya</string>

    //Thilanka
    <string name="app_name1">MAD project</string>
    <string name="buy_tickets1">Buy Tickets</string>
    <string name="action">Action</string>
    <string name="action1">Action</string>
    <string name="buy_tickets2">Buy Tickets</string>
    <string name="the_rhythm">The Rhythm</string>
    <string name="todo1">TODO</string>
    <string name="todo2">TODO</string>
    <string name="todo3">TODO</string>
    <string name="bloodshot">BloodShot</string>
    <string name="todo4">TODO</string>
    <string name="todo5">TODO</string>
    <string name="sign_in_register">SIGN IN / REGISTER</string>
    <string name="watch_trailer">Watch Trailer</string>
    <string name="buy_tickets3">Buy Tickets</string>
    <string name="directors">Directors :</string>
    <string name="action3">Action</string>
    <string name="david_s_f_wilson">David S. F. Wilson</string>
    <string name="genres">Genres :</string>
    <string name="description1">After he and his wife are murdered, marine Ray Garrison is resurrected by a team of scientists. Enhanced with nanotechnology, he becomes a superhuman,
        biotech killing machine - Bloodshot. As Ray first trains with fellow super-soldiers, he cannot recall anything from his former life.</string>
    <string name="todo6">TODO</string>
    <string name="bloodshot1">BloodShot</string>
    <string name="action4">Action</string>
    <string name="description">After he and his wife are murdered, marine Ray Garrison is resurrected by a team of scientists. Enhanced with nanotechnology, he becomes a superhuman,
        biotech killing machine - Bloodshot. As Ray first trains with fellow super-soldiers, he cannot recall anything from his former life.</string>
    <string name="select_date">Select Date</string>
    <string name="select_show_time">Select Show Time</string>
    <string name="select_theater">Select Theater</string>
    <string name="next_button">Next</string>
    <string name="todo7">TODO</string>
    <string name="aug_15">Aug 15</string>
    <string name="aug_21">Aug 21</string>
    <string name="aug_20">Aug 20</string>
    <string name="aug_16">Aug 16</string>
    <string name="aug_17">Aug 17</string>
    <string name="aug_18">Aug 18</string>
    <string name="aug_19">Aug 19</string>
    <string name="aug_24">Aug 24</string>
    <string name="aug_23">Aug 23</string>
    <string name="aug_22">Aug 22</string>
    <string name="_10_30_am">10.30 AM</string>
    <string name="_10_00_pm">10.00 PM</string>
    <string name="_7_00_pm">7.00 PM</string>
    <string name="_1_30_pm">1.30 PM</string>
    <string name="_4_15_pm">4.15 PM</string>
    <string name="savoy_2_wellawatta">Savoy 2 Wellawatta</string>
    <string name="excelworld_maradana">Excelworld Maradana</string>
    <string name="regal_gampaha">Regal Gampaha</string>
    <string name="cina_city_maradana">Cina City Maradana</string>
    <string name="savoy_3d_wellawatta">Savoy 3D Wellawatta</string>
    <string name="cinemax_3d_jaela">Cinemax 3D Jaela</string>
    <string name="theater1">Theater</string>

</resources>